# test_task_backend_interactive_dev_charwey_erasmus

./: Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
apps/users/: admin.py  backend.py  managers.py  models.py  selectors.py  serializers.py  services.py  signals.py  social_service.py  urls.py  utils.py
apps/users/apis/: public.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0002_user_nullable_email_phone.py  0003_merge_0002_alter_user_phone_number_0002_user_nullable_email_phone.py  0004_alter_user_phone_number_nullable.py  0005_force_phone_number_nullable.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
